Added Voters Verification to Merchant API
